Use CSS 4 syntax to accomodate flex wrap (See FF Bug 1270891)

--- a/form.css
+++ b/form.css
@@ -204,6 +204,10 @@ ul.loose li {
   break-inside: avoid-page;
 }
 
+.wrap {
+  wrap-before: always;
+}
+
 @media screen {
   html {
     font-size: calc(100% * var(--base-size-pt) / 12);
